--- a/src/test/resources/translations/DE_DE.lang
+++ b/src/test/resources/translations/DE_DE.lang
@@ -1,2 +1,2 @@
-only.german.known=Dieser Text ist nur hier verfügbar.
+only.german.known=Dieser Text ist nur hier verf&uuml;gbar.
 known.by.both=Bei beiden bekannt.
